add intro section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,44 @@
             <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
         </nav>
     </header>
-
+    <section class="hero">
+        <div class="hero-content">
+            <h2>I am fan of traveling to places which makes me wonder nature!!!</h2>
+            <p>
+                Let's start from exploring the wonders of Arbaminch together. Follow me!
+            </p>
+            <div class="btn-container">
+                <a href="about.html" class="button">Fourty springs</a>
+                <a href="gallery.html#crocodiles" class="button">Crocodile ranch</a>
+                <a href="gallery.html#nechsar-park" class="button">Nechsar park</a>
+            </div>
+        </div>
+    </section>
+   
+    <section class="intro">
+        <div class="card">
+            <h3>The Forty Springs</h3>
+            <p>
+                Founded in 1955, this stunning natural site holds great historical significance.
+                Arbaminch features over 40 pristine springs that provide pure, drinkable water. 
+                The natural springs flow with pure water in a memorizing display of nature's Purity.
+            </p>
+        </div>
+        <div class="card">
+            <h3>Crocodile Ranch</h3>
+            <p>
+                It is home to over 2,500 crocodiles, offering visitors a chance to observe these reptiles in their natural habitat.
+                tour guides share fascinating facts about crocodile biology, making it an educational experience.
+            </p>
+        </div>
+        <div class="card">
+            <h3>Nechsar Park</h3>
+            <p>
+                A haven for wildlife surrounded by Lakes Abaya and Chamo, 
+                The Park is a paradise for wildlife with diverse ecosystems.
+                It is reknowned for its different types of fishes in the lakes and vibrant birdlife, best appreciated from above.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
