--- a/about.html
+++ b/about.html
@@ -18,5 +18,79 @@
             <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
         </nav>
     </header>
+        <main>
+        <section class="springs-hero">
+            <h2>A haven for Natural Purity</h2>
+        </section>
+        <section class="content"> 
+            <div class="spring -section"> 
+                <img src="images/arbaminch-gate.jpg" alt="Gate of arbaminch which diverges into two roads" class="feature-img">
+                <h3>The Fourty springs</h3>
+                <p>
+                   When u enter through the main gate, there are two  roads. The first goes to the fourty springs while the other passes to Nechsar national park .
+                   I choose the fourty springs to see first.There was around 2-3 kms in between which i choose to reach with car. 
+                   The street is full of trees which gives a perfect opportunity to unwind and appreciate the beauty of nature.<br> 
+                   according to the tour guide, the city was founded in 1955 by a local leader known as "Fitawrari"(whose full name I unfortunately couldn't recall).
+                   He first come to this place, see and count the springs and observe that they are around 40 and declared the city's name as"Arbaminch" to the city.
+                </p>
+            </div>
+ 
+            <div class="fact-box">
+                <h4>Spring Water Facts</h4>
+                <ul class="spring-facts">
+                    <li>Completely natural mineral water</li>
+                    <li>No chemical treatment needed</li>
+                    <li>Local villagers' primary water source</li>
+                    <li>2-3km bike ride through lush greenery</li>
+                </ul>
+            </div>
+            <div class="price-tag">
+                Entry Fee: 100 ETB 
+            </div><br><br>
+            <div class="crocodile-section"> 
+                <img src="images/Crocodile-ranch.jpg" alt="Gate of arbaminch which diverges into two roads" class="feature-img">
+                <h2>The Crocodile ranch</h2>
+                <p>
+                    We continued our journey to the crocodile ranch. The tour guide informed me that there are over 2,500 crocodiles there.
+                    I saw many crocodiles lounging around a small lake.this is the picture of them.
+                    interestingly, crocodiles are farmed for their leather. 
+                    What shocked me was hearing that after their skin is harvested, the carcasses are fed to other crocodiles.
+                    Sometimes, larger crocodiles even eat smaller ones.<br>Crocodiles do not chew their food; they swallow it whole.           
+                    They bask in the sun with their mouths open because the air and sunlight helps them digest their food.<br>
+                    <span class="exitement-tag"> Amazing nature </span> 
+                    I also asked about why a person's fake cry is usually said "crocodile tears" (in Amharic: "yeazo emba"). 
+                    They explained me that crocodiles cry in two situations: The first one is, inorderto lubricate their eyes 
+                    when they are out of water and their eyes are dry but not because they are sad. 
+                    The other is, when they swallow a food that is too big for them, they may sweat and shed tears while struggling to swallow. 
+                    so they cry without being sad. This is why we use the term "ye azo emba" for people who pretend to be sad.
+                </p>
+            </div>
+
+            <div class="fact-card">
+                <h3>Crocodile's Behavior</h3>
+                <ol>
+                    <li>Bask in sunlight after eating</li>
+                    <li>Sensitive to loud noises</li>
+                    <li>Eat only twice a week</li>
+                    <li>Swallow whole food</li>
+                </ol>
+            </div>
+            
+            <div class="price-tag">
+                Entry Fee: 30 ETB for students
+            </div>
+            
+            <div class="experience">
+
+                <h3>The Experience</h3>
+                <img src="images/drinking-leaf.jpg" alt="Drinking from springs with leaf" class="feature-img">
+                <p>
+                    When i reach to the springs i see that there are 40+ springs flowing downward in a naturally interesting way.
+                    The villagers also get the water they drink from there. 
+                    Visitors can drink directly from the springs using traditional methods-cupping water in large leaves as the locals have done for generations. 
+                    The water is cool, refreshing, and carries the clean taste of untouched nature.
+                    And i observe that the water is drunk without adding any chemical to it.
+                    I also taste the water pouring with a leaf (that they used to drink) the image here shows when i try to drink the water with the leave.
+                </p>
 </body>
 </html>
