--- a/about.html
+++ b/about.html
@@ -92,5 +92,40 @@
                     And i observe that the water is drunk without adding any chemical to it.
                     I also taste the water pouring with a leaf (that they used to drink) the image here shows when i try to drink the water with the leave.
                 </p>
+                </section>
+        <section class="table"></section>
+            <table class="wildlife-facts">
+                <thead>
+                    <tr>
+                        <th colspan="2">Wildlife Facts</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Park Information</th>
+                    </tr>
+                    <tr>
+                        <td>Lake Chamo: 550km² area</td>
+                    </tr>
+                    <tr>
+                        <td>3-6 meters depth</td>
+                    </tr>
+                    <tr>
+                        <td>Abaya is larger but muddy</td>
+                    </tr>
+                    <tr>
+                        <td>Rich birdlife</td>
+                    </tr>
+                    <tr>
+                        <td>Entry fee was 100 birr</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
+
+</body>
+</html>
+                
 </body>
 </html>
