add price info section

--- a/contact.html
+++ b/contact.html
@@ -83,3 +83,23 @@
                 <button type="submit" class="submit-btn">Send Inquiry</button>
             </form>
         </section>
+        <section class="price-info">
+            <h3>Entry Fees</h3>
+            <div class="price-container">
+                <div class="price-item">
+                    <h4>Forty Springs</h4>
+                    <p>100 ETB</p>
+                </div>
+                <div class="price-item">
+                    <h4>Nechsar Park</h4>
+                    <p>100 ETB</p>
+                </div>
+                <div class="price-item">
+                    <h4>Crocodile Ranch</h4>
+                    <p>30 ETB</p>
+                </div>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
