add comments to understand

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+      <!--Header section-->
     <header>
         <h1>About My Arbaminch Experience</h1>
         <nav>
@@ -18,6 +19,7 @@
             <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
         </nav>
     </header>
+          <!--content section-->
         <main>
         <section class="springs-hero">
             <h2>A haven for Natural Purity</h2>
@@ -92,7 +94,8 @@
                     And i observe that the water is drunk without adding any chemical to it.
                     I also taste the water pouring with a leaf (that they used to drink) the image here shows when i try to drink the water with the leave.
                 </p>
-                </section>
+              </section>
+              <!--park info-->
         <section class="table"></section>
             <table class="wildlife-facts">
                 <thead>
