--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+        <!--header section-->
     <header>
         <h1>Gallery of Arba Minch </h1>
         <nav>
@@ -18,6 +19,7 @@
             <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
         </nav>
     </header>
+          <!--gallery grid structure-->
         <main>
         <section class="gallery-intro">
             <h2>Crocodiles, Lakes & Wilderness</h2>
@@ -103,3 +105,5 @@
             </div>
         </section>
     </main>
+</body>
+</html>
