--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+      <!--header section-->
     <header>
         <h1>What I Love</h1>
         <nav>
@@ -18,6 +19,7 @@
             <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
         </nav>
     </header>
+        <!--introduction section-->
     <section class="hero">
         <div class="hero-content">
             <h2>I am fan of traveling to places which makes me wonder nature!!!</h2>
@@ -31,7 +33,7 @@
             </div>
         </div>
     </section>
-   
+        <!--rough intro-->
     <section class="intro">
         <div class="card">
             <h3>The Forty Springs</h3>
