add footer with icons

--- a/index.html
+++ b/index.html
@@ -59,5 +59,14 @@
             </p>
         </div>
     </section>
+        <!--footer-->
+    <footer>
+        <p>&copy; 2025 developed by Mishkiya. All right reserved | Get in Touch</p>
+         <div class="social-icons">
+            <a href="#" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="#" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
