final version of submisson

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
             </div>
             
             <div class="gallery-item">
-                <img src="images/crocodile-ranch.jpg" alt="Crocodile ranch at Arba Minch" id="crocodiles">
+                <img src="images/Crocodile-ranch.jpg" alt="Crocodile ranch at Arba Minch" id="crocodiles">
                 <div class="img-caption">
                     <h3>Crocodile Ranch</h3>
                     <p>Home to over 2,500 Nile crocodiles with unique behaviors</p>
